<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.layout.auth.login.LoginFragment"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="100dp"
        style="@style/TextView.SplashScreen"
        android:textColor="@color/primaryColor"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/textLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_auth">
        <TextView
            android:layout_marginTop="35dp"
            android:id="@+id/textResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetPasword"
            android:textAlignment="center"
            style="@style/TextView.SplashScreen"
            android:textColor="@color/textColorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textResetPasswordDesc"
            style="@style/TextView.SplashScreen.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/confirmPasswordDesc"
            android:textAlignment="center"
            android:textColor="@color/textColorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textResetPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputForgotPassword"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="45dp"
            style="@style/EditText.Input"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textResetPasswordDesc"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputConfirmForgotPassword"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="45dp"
            style="@style/EditText.Input"
            android:inputType="textPassword"
            android:hint="@string/confirm_hint_password"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputForgotPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_confirm"
            android:textColor="@color/white"
            style="@style/TextView.Medium"
            android:textAllCaps="false"
            android:background="@drawable/background_button_auth"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>