<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.layout.auth.login.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:letterSpacing="0.1"
        android:layout_marginTop="100dp"
        style="@style/TextView.SplashScreen"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLogo">

        <TextView
            android:id="@+id/textLogin"
            style="@style/TextView.secondSizeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:id="@+id/textLoginDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login_desc"
            style="@style/TextView.fifthSizeText"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            android:lineSpacingMultiplier="1.5"
            android:letterSpacing="0.1"
            app:layout_constraintTop_toBottomOf="@id/textLogin"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:background="@drawable/background_input"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/textLoginDesc"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:passwordToggleEnabled="true"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@id/inputEmail">

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:background="@drawable/background_input"
                android:inputType="textEmailAddress"
                android:layout_marginTop="50dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot_password"
            style="@style/TextView.sixthSizeText"
            android:textAlignment="textEnd"
            android:textColor="@color/mainTextColor"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boxPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:textColor="@color/mainTextColor"
            android:letterSpacing="0.1"
            style="@style/TextView.fourthSizeText"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textSignUpDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Don’t have an account? Let’s"
                style="@style/TextView.fifthSizeText"
                android:textColor="@color/mainTextColor"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Sign Up"
                android:contextClickable="true"
                android:textColor="@color/blue"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toEndOf="@id/textSignUpDesc"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
