<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.layout.auth.login.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="100dp"
        style="@style/TextView.SplashScreen"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLogo">

        <TextView
            android:id="@+id/textSignUp"
            style="@style/TextView.secondSizeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:id="@+id/textSignUpDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpDesc"
            style="@style/TextView.fifthSizeText"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            android:lineSpacingMultiplier="1.5"
            app:layout_constraintTop_toBottomOf="@id/textSignUp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/textSignUpDesc">

            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:autofillHints="username"
                android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                style="@style/TextView.fifthSizeText"
                android:drawablePadding="10dp"
                android:background="@drawable/background_input"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@id/boxUsername">

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:autofillHints="emailAddress"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                style="@style/TextView.fifthSizeText"
                android:drawablePadding="10dp"
                android:background="@drawable/background_input"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@id/boxEmail">

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:background="@drawable/background_input"
                android:inputType="textEmailAddress"
                android:layout_marginTop="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/mainTextColor"
            style="@style/TextView.fourthSizeText"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textSignInDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Already have an account? Let’s"
                style="@style/TextView.fifthSizeText"
                android:textColor="@color/mainTextColor"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Sign In"
                android:textColor="@color/blue"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toEndOf="@id/textSignUpDesc"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>