<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_back_button"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="20dp"
            android:drawableStart="@drawable/ic_baseline_arrow_back_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="10dp"
            android:text="Change Password"
            android:letterSpacing="0.1"
            style="@style/TextView.thirdSizeText"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <TextView
        android:id="@+id/changePasswordDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changePasswordDesc"
        android:letterSpacing="0.1"
        style="@style/TextView.fifthSizeText"
        android:textColor="@color/mainTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="15dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/changePasswordDesc"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currentPassword"
            style="@style/TextView.fifthSizeText"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:background="@drawable/background_input"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/boxPassword"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            style="@style/TextView.fifthSizeText"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:background="@drawable/background_input"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:textColor="@color/mainTextColor"
        android:letterSpacing="0.1"
        style="@style/TextView.fourthSizeText"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>